2009-01-20  Esteban Sanchez  <estebans@artica.es>

	* include/functions_visual_map.php: Fixed a notice when the node looks
	for any monitor down in an agent.

2009-01-20  Evi Vanoost  <vanooste@rcbi.rochester.edu>

	* ajax.php, include/config.inc.php, include/config_process.php,
	include/functions.php, include/functions_db.php, 
	include/functions_ui.php, index.php, install.php, 
	operation/users/user.php, operation/users/user_edit.php,
	reporting/fgraph.php: Added pluggable authentication and moved functions

	* general/login_page.php, general/logon_ok.php, 
	godmode/agentes/modificar_agente.php, 
	godmode/users/configure_users.php, godmode/users/user_list.php, 
	operation/agentes/estado_agente.php, operation/incidents/incident.php, 
	operation/incidents/incident_search.php: Updated functions

2009-01-20  Esteban Sanchez  <estebans@artica.es>

	* ChangeLog: Fixed tabs. Removed some conflict markups and a bit of
	style here and there.

	* index.php, godmode/setup/setup.php, include/styles/menu.css,
	operation/agentes/estado_agente.php,
	operation/agentes/estado_monitores.php,
	operation/agentes/estado_ultimopaquete.php,
	include/functions.php: Tab and spaces style correction.

	* godmode/reporting/map_builder.php: Use generic database functions
	for the insert. Now a node can represent a whole agent, changing to
	bad if any module has failed.

	* include/config_process.php: Use generic databse functions for
	inserts. Fixed an error when inserting loginhash_pwd token. Make the
	token a bit more complicated by multiplying two numbers.

	* include/functions_visual_map.php: Add support to agent nodes that
	will turn to bad icon when any module fails.

2009-01-20  Esteban Sanchez  <estebans@artica.es>

	* include/javascript/jquery.js: Downgraded to 1.2. It was causing some
	errors in visual map edition.

2009-01-20  Sancho Lerena <slerena@artica.es>

	* index.php: Added support for external authentication, based on a HASH.
